--- a/estilo/style.css
+++ b/estilo/style.css
@@ -61,6 +61,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    padding-bottom: 40px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.575);
 }
 
